test/fail/basic_syntax/bad_anon_call.lily
#[
SyntaxError: Cannot anonymously call resulting type 'Integer'.
    from bad_anon_call.lily:6:
]#

(10)()
